--- a/club/snake.html
+++ b/club/snake.html
@@ -10,6 +10,7 @@ For our first project we wanted to make something cool, but at the same time not
 
 <p>
 We used an 8x8 LED matrix for the display as it would allow us for enough resolution to play the game, but was fairly cheap. To drive all 64 of the pixels, we used a specialised driver chip that would accept serial inputs called the <a href='https://www.sparkfun.com/datasheets/Components/General/COM-09622-MAX7219-MAX7221.pdf'>MAX7219</a>.
+</p>
 
 <p>
 We started prototyping the game by connecting it loosely to an Arduino so we could focus our attention on the software (programming the game) rather than the hardware.
@@ -27,7 +28,7 @@ The Arduino sketch (code) for this can be seen over on <a href='https://github.c
 We were prototyping with an Arduino Mega and a breadboard connected with some jumpers:
 </p>
 
-<img src='https://joeiddon.github.io/images/prototype.jpg'></img>
+<img src='/images/snake/prototype.jpg'></img>
 
 <p>
 Now that the code was working, we decided to start on the finished product. To do this, we needed to be able to solder (to make a proper controller) and this would be a valuable skill for the future. Everyone picked it up straight away.
@@ -36,8 +37,6 @@ Now that the code was working, we decided to start on the finished product. To d
 <p>
 We then gathered the components - the main thing being a more compact matrix. We brought one from Ebay quite cheaply but it required us to solder it together including a miniscule surface-mount chip.
 </p>
-
-<!--<img src='https://joeiddon.github.io/images/matrix/matrix.jpg'></img>-->
 
 <p>
 Here's the driver chip that we tried to solder and a close-up of the LED matrix.
@@ -62,8 +61,8 @@ And that was pretty much it! We uploaded the sketch to the Nano that we had alre
 Here are some photos of the finished product, and finally a video of it in action.
 </p>
 
-<img class='third_img' src='https://joeiddon.github.io/images/finnishedSide.jpg'
-><img class='third_img' src='https://joeiddon.github.io/images/finnishedBottom.jpg'
-><img class='third_img' src='https://joeiddon.github.io/images/finnishedTop.jpg'>
+<img class='third_img' src='/images/snake/side.jpg'
+><img class='third_img' src='/images/snake/bottom.jpg'
+><img class='third_img' src='/images/snake/top.jpg'>
 
-<iframe width='1260' height='720' src='https://www.youtube.com/embed/ASf3uLuhJrI?mute=1&rel=0&modestbranding=1&showinfo=0&color=white' frameborder='0' allowfullscreen=''></iframe>
+<video src='/videos/snake_game.mp4' controls='controls'></video>
