work in progress notice

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Welcome to my website</h1>
+<h1>Welcome to my website (still work in progress...)</h1>
 
 <p>
 Hello, here I will be posting my projects and other things. To see my projects, use the drop-down menu under the "Projects" tab at the top.
