--- a/projects/arduino/bitcoin.html
+++ b/projects/arduino/bitcoin.html
@@ -29,7 +29,7 @@ The projects aim was to display the current bitcoin price in binary over some ro
 
 <p>Here are some photos of the finished thing. (the price at the time was: <code>01111110100110</code> which is £8102).</a>
 
-<img src='/images/bitcoin/side.jpeg'></img>
+<img src='/images/bitcoin/side.jpg'></img>
 <img src='/images/bitcoin/top.jpg'></img>
 <img src='/images/bitcoin/top.jpg'></img>
 <img src='/images/bitcoin/front.jpg'></img>
