--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ layout: default
 <h1> Error 404: Page Not Found </h1>
 
 <p>
-You appear to have gotten lost call 999 to be rescued, or drop an issue <a href='https://github.com/joeiddon/joeiddon.github.io/issues'>here</a> stating where you got this link.  I appreciate your time. Click <a href='https://joeiddon.github.io'>here</a> to return to the homepage.
+You appear to have gotten lost. Call 999 to be rescued, or drop an issue <a href='https://github.com/joeiddon/joeiddon.github.io/issues'>here</a> stating where you got this link.  I appreciate your time. Click <a href='https://joeiddon.github.io'>here</a> to return to the homepage.
 </p>
 
 <p>
