naming confusion fx

--- a/projects/arduino/bitcoin.html
+++ b/projects/arduino/bitcoin.html
@@ -31,6 +31,6 @@ The projects aim was to display the current bitcoin price in binary over some ro
 
 <img src='/images/bitcoin/side.jpg'></img>
 <img src='/images/bitcoin/top.jpg'></img>
-<img src='/images/bitcoin/top.jpg'></img>
+<img src='/images/bitcoin/bottom.jpg'></img>
 <img src='/images/bitcoin/front.jpg'></img>
 <img src='/images/bitcoin/lipo.jpg'></img>
