videos all changed to github hosting rather than youtube

--- a/projects/arduino/laser.html
+++ b/projects/arduino/laser.html
@@ -20,7 +20,7 @@ layout: default
 
 <p>Here is a video of me breaking the beam:</p>
 
-<iframe width="1260" height="720" src="https://www.youtube.com/embed/msnsm6aShFo?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<video src='/videos/laser_gate.mp4' controls='controls'></video>
 
 <p>Finally, I realised that when the device was held close to a solid surface, the reflection of the LASER's light off the surface was enough to be noticable by the Arduino. I modified the simple code (merely adjusting a threshold #define) and now it worked as a proximity sensor!</p>
 
@@ -28,4 +28,4 @@ layout: default
 
 <p>Here is a video showing the proximity sensing functionality:</p>
 
-<iframe width="1260" height="720" src="https://www.youtube.com/embed/czWjbmVSPvI?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<video src='/videos/proximity_laser.mp4' controls='controls'></video>
