--- a/projects/arduino/violent_robot_arm.html
+++ b/projects/arduino/violent_robot_arm.html
@@ -31,9 +31,9 @@ Finally, once I had finished the design of the frame, I printed them out and put
 </p>
 
 <img src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArm.jpg'></img>
-<img style='third_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArmNano.jpg'></img
-><img style='third_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/powerSupply.jpg'></img
-><img style='third_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArmGripper.jpg'></img>
+<img class='third_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArmNano.jpg'></img
+><img class='third_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/powerSupply.jpg'></img
+><img class='third_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArmGripper.jpg'></img>
 
 <p>
 The actual design is now obvious and I was pleased with how it came out. I then soldered together a mini circuit board which just had some headers for the servo leads and for the arduino nano I used to program it. I had to setup the servos power to come from an external 7v power suppply (bottom) because they drew a lot of current which the arduino wouln't have been able to handle.
