all images should work now

--- a/club/index.html
+++ b/club/index.html
@@ -2,16 +2,16 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="https://joeiddon.github.io/projects/project.css">
+<link rel='stylesheet' href='https://joeiddon.github.io/projects/project.css'>
 
 <h1>Arduino Club</h1>
 
 <p>
-At the end of the 2017 Summer Term, I was granted some money to start a club revolving around <a href="https://joeiddon.github.io/projects/arduino/about">Arduinos</a>. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
+At the end of the 2017 Summer Term, I was granted some money to start a club revolving around <a href='https://joeiddon.github.io/projects/arduino/about'>Arduinos</a>. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
 </p>
 
 <p>
-To keep track of what we spend the money on, <a href="https://joeiddon.github.io/club/log">this page</a> contains a table of things we've bought.
+To keep track of what we spend the money on, <a href='https://joeiddon.github.io/club/log'>this page</a> contains a table of things we've bought.
 </p>
 
 <p>
@@ -21,14 +21,13 @@ The images below are linked to their corresponding projects so feel free to take
 <table>
   <tr>
     <td>
-      <a href="https://joeiddon.github.io/club/snake">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/snake_fin.jpg"></img>
+      <a href='https://joeiddon.github.io/club/snake'>
+      <img class='project_img' src='/images/club/thumbnails/snake.jpg'></img>
       </a>
     </td>
-    
     <td>
-      <a href="https://joeiddon.github.io/club/hexapod">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/hexapod/cut_body.jpg"></img>
+      <a href='https://joeiddon.github.io/club/hexapod'>
+      <img class='project_img' src='/images/club/thumbnails/hexapod.jpg'></img>
       </a>
     </td>
   </tr>
