--- a/projects/javascript/sierpinski.html
+++ b/projects/javascript/sierpinski.html
@@ -14,21 +14,15 @@ layout: default
 A special property of the Sierpinski curve is that it fills two-dimensional space. If each curve in the sequence below is drawn to half the scale of its predecessor, then every point in the region of the curve will be found arbitarily close to some members of the sequence. In other words, the sequence of curves comes closer and closer to every single point in the region. The limiting curve actually covers them all.
 </p>
 
-<style>
-img {
-        width: 300px;
-}
-</style>
-
-<img src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/sierpinski1.JPG'></img>
-<img src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/sierpinski2.JPG'></img>
-<img src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/sierpinski3.JPG'></img>
+<img class='third_img' src='/images/sierpinski_curves/one.jpg'></img
+><img class='third_img' src='/images/sierpinski_curves/two.jpg'></img
+><img class='third_img' src='/images/sierpinski_curves/three.jpg'></img>
 
 <p>
 The generation of these curves can be done really succinctly with recursion. Two functions are required to do this which call each other. Assuming the functions 'bendRight' and 'bendLeft' are already defined (you can have play with how these work with this interactive demonstration <a href='https://joeiddon.github.io/SierpinskiCurve/keyboard'>here</a>) as functions to move the current path of the curve round to the right or left respectively, these are the two functions:
 </p>
 
-<pre>
+<pre><code>
 function zig(n){
         if (n == 1){
                 bendLeft()
@@ -53,7 +47,7 @@ function zag(n){
                 zag(n/2)
         }
 }
-</pre>
+</code></pre>
 
 <p>
 Having both these defined, we can simply call zig(2 ** n) in the 'main program' to generate the curve. You can watch them be generated <a href='https://joeiddon.github.io/sierpinski_curve'>here</a> if you didn't already follow the link at the top.
