--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <link rel='stylesheet' href='https://joeiddon.github.io/projects/project.css'>
 
-<h1>Arduinos Projects</h1>
+<h1>Arduino Projects</h1>
 
 <p>These are my arduino-based projects. Feel free to explore any of them below.</p>
 
