--- a/projects/javascript/sierpinski.html
+++ b/projects/javascript/sierpinski.html
@@ -22,7 +22,7 @@ A special property of the Sierpinski curve is that it fills two-dimensional spac
 The generation of these curves can be done really succinctly with recursion. Two functions are required to do this which call each other. Assuming the functions 'bendRight' and 'bendLeft' are already defined (you can have play with how these work with this interactive demonstration <a href='https://joeiddon.github.io/SierpinskiCurve/keyboard'>here</a>) as functions to move the current path of the curve round to the right or left respectively, these are the two functions:
 </p>
 
-<pre><code>
+<pre>
 function zig(n){
         if (n == 1){
                 bendLeft()
@@ -47,7 +47,7 @@ function zag(n){
                 zag(n/2)
         }
 }
-</code></pre>
+</pre>
 
 <p>
 Having both these defined, we can simply call zig(2 ** n) in the 'main program' to generate the curve. You can watch them be generated <a href='https://joeiddon.github.io/sierpinski_curve'>here</a> if you didn't already follow the link at the top.
