imgs updated for club

--- a/club/hexapod.html
+++ b/club/hexapod.html
@@ -41,7 +41,7 @@ However, an issue was that the Arduino board which we were planning on using onl
 Here is a picture of us setting things up for the first time and testing the board out:
 </p>
 
-<img src='/images/hexapod/pca9685.jpg'></img>
+<img src='/images/club/hexapod/pca9685.jpg'></img>
 
 <p>
 The next step was to use a glue-gun to secure everything together.
