--- a/club/snake.html
+++ b/club/snake.html
@@ -42,8 +42,8 @@ We then gathered the components - the main thing being a more compact matrix. We
 Here's the driver chip that we tried to solder and a close-up of the LED matrix.
 </p>
 
-<img class='half_img' src='/images/club/maxim.png'></img><img
-class='half_img' src='/images/club/closeup.png'></img>
+<img class='half_img' src='/images/club/snake/maxim.png'></img><img
+class='half_img' src='/images/club/snake/closeup.png'></img>
 
 <p>
 However, after soldering the different components onto the board, we realised that to make the project as small as possible, it would make sense to just use the larger matrix as this had enough space to mount everything on (the smaller one was basically too small!). So even though this was a valuable lesson on soldering, we ended up <b>not</b> using it!
