--- a/club/log.html
+++ b/club/log.html
@@ -17,14 +17,15 @@ td {
 <script>
 var tbdy = document.createElement("tbody")
 var rws = [
-["Item",                     "Price", "Remaining"],
-["LED Matrix",               "1.49",  "248.51"   ],
-["3x Arduino Nano",          "5.49"              ],
-["12x SG92R Servos",         "27.68"             ],
-["PCA9685 Servo Controller", "2.52"              ],
-["6x SG92R Servos",          "16.43"             ],
-["4x L298n Motor Driver",    "9.59"              ],
-["8x Geared Motors",         "17.54"             ]
+["Item",                      "Price", "Remaining"],
+["LED Matrix",                "1.49",  "248.51"   ],
+["3x Arduino Nano",           "5.49"              ],
+["12x SG92R Servos",          "27.68"             ],
+["PCA9685 Servo Controller",  "2.52"              ],
+["6x SG92R Servos",           "16.43"             ],
+["4x L298n Motor Driver",     "9.59"              ],
+["8x Geared Motors",          "17.54"             ],
+["120x Male, Female Jumpers", "2.82"              ]
 ]
 for (var r = 2; r < rws.length; r++){
 	console.log(r)
